--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -74,6 +74,7 @@
   <ItemGroup>
     <Compile Include="BasicBlock.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="CollisionGrid.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
