--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Character.cs" />
     <Compile Include="CollisionGrid.cs" />
     <Compile Include="GameObject.cs" />
+    <Compile Include="GridObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game.cs" />
