Addded Platform object and adding to grid
Added the platform object.
Added the capability to add it to the grid, and other Grid objects.
Slightly increased jump strength.
Implemented fall through for any surface (though it's only really there
for going down through platforms).
Added a crude platform image.

--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -75,6 +75,7 @@
     <Compile Include="BasicBlock.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Platform.cs" />
     <Compile Include="CollisionGrid.cs" />
     <Compile Include="GameObject.cs" />
     <Compile Include="GridObject.cs" />
