Added some unfinished and unused classes
Item is intended to be a unifying base class for items, and should allow
for transitioning a block from an inventory item, being placed in a
grid, being removed from the grid into the world, and picked up from the
world into the players inventory.

Belt is the hotbar for items.

--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -73,8 +73,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicBlock.cs" />
+    <Compile Include="Belt.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="CollisionGrid.cs" />
     <Compile Include="GameObject.cs" />
