--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -72,7 +72,7 @@
     <Reference Include="System.Net" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicBlock.cs" />
+    <Compile Include="Block.cs" />
     <Compile Include="Belt.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
