Integrated ItemCatalog, ItemData, and custom imgs
Added item catalog to build up a list of items
Implemented using itemId in the saving of the grid, so now we load grid
objects based on the custom items being defined.

--- a/Teraform/Teraform/Teraform.csproj
+++ b/Teraform/Teraform/Teraform.csproj
@@ -76,8 +76,8 @@
     <Compile Include="Belt.cs" />
     <Compile Include="Camera.cs" />
     <Compile Include="Character.cs" />
-    <Compile Include="ItemData.cs" />
     <Compile Include="Item.cs" />
+    <Compile Include="ItemCatalog.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Platform.cs" />
     <Compile Include="CollisionGrid.cs" />
